--- a/index.html
+++ b/index.html
@@ -1134,47 +1134,52 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
 </svg> -->
 <div class="flex justify-center">
 
-<div class="block box-left w-32 h-32 rounded-lg bg-green-400"></div>
-<svg viewBox="0 0 240 80" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" class="w-2/6 mx-auto">
- <style>.small {
-      font: italic 13px sans-serif;
-      fill: red;
-    }
-    .heavy {
-      font: bold italic 20px sans-serif;
-      fill: blueviolet;
-    }
-
-    .Rrrrr {
-      font: italic bold 40px sans-serif;
-      fill: greenyellow;
-    }</style>
- <defs>
-  <radialGradient id="svg_6" spreadMethod="pad">
-   <stop id="jq_stop_4313" offset="0" stop-color="#000000"/>
-   <stop id="jq_stop_451" offset="1" stop-color="#ffffff"/>
-  </radialGradient>
-  <radialGradient cx="0.5" cy="0.5" id="svg_4" r="0.5" spreadMethod="pad">
-   <stop id="jq_stop_4313" offset="0" stop-color="#000000"/>
-   <stop id="jq_stop_451" offset="1" stop-color="#ffffff"/>
-  </radialGradient>
-  <radialGradient gradientTransform="translate(0,0.3137931034482758) scale(1,0.37241379310344835)" id="svg_8" r="0.79" spreadMethod="pad">
-   <stop id="jq_stop_7272" offset="0" stop-color="#bfbfbf"/>
-   <stop id="jq_stop_8346" offset="1" stop-color="#404040"/>
-  </radialGradient>
- </defs>
- <g class="layer">
-  <title>Layer 1</title>
-  <ellipse cx="120.5" cy="39.96" fill="url(#svg_8)" fill-opacity="0.79" id="svg_5" opacity="0.35" rx="118.5" ry="37.5" stroke="url(#svg_4)" stroke-dasharray="2" stroke-linecap="null" stroke-linejoin="round" stroke-width="3"/>
-  <text class="self-center Rrrrr" fill="#ffff00" font-family="Cursive" font-size="4" id="svg_3" opacity="0.95" stroke="url(#svg_6)" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="round" stroke-width="0" transform="matrix(1, 0, 0, 1, 0, 0)" x="100" y="47.73">GSAP</text>
-  <text class="self-center heavy" id="svg_2" transform="matrix(1.05317, 0, 0, 1.16667, -3.34979, -7.66667)" x="55.4" y="61.57">library</text>
-  <text class="self-center  small" id="svg_1" transform="matrix(1, 0, 0, 1, 0, 0) matrix(1.05417, 0, 0, 1.1866, -2.60617, -0.465693)" x="40.46" y="20.9">Animate</text>
- </g>
-</svg>
+<svg viewBox="0 0 240 80" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" class="w-2/6 mx-auto anmiateGsap-1">
+  <style>.small {
+       font: italic 13px sans-serif;
+       fill: red;
+     }
+     .heavy {
+       font: bold italic 20px sans-serif;
+       fill: blueviolet;
+     }
+ 
+     .Rrrrr {
+       font: italic bold 40px sans-serif;
+       fill: greenyellow;
+     }</style>
+  <defs>
+   <radialGradient id="svg_6" spreadMethod="pad">
+    <stop id="jq_stop_4313" offset="0" stop-color="#000000"/>
+    <stop id="jq_stop_451" offset="1" stop-color="#ffffff"/>
+   </radialGradient>
+   <radialGradient cx="0.5" cy="0.5" id="svg_4" r="0.5" spreadMethod="pad">
+    <stop id="svg_7" offset="0" stop-color="#000000"/>
+    <stop id="svg_9" offset="1" stop-color="#ffffff"/>
+   </radialGradient>
+   <radialGradient cx="0.5" cy="0.5" gradientTransform="translate(0,0.14137931034482754) scale(1,0.7172413793103449)" id="svg_11" r="0.79" spreadMethod="pad">
+    <stop id="jq_stop_7272" offset="0" stop-color="#bfbfbf"/>
+    <stop id="jq_stop_8346" offset="1" stop-color="#404040"/>
+   </radialGradient>
+  </defs>
+  <g class="layer">
+   <title>Layer 1</title>
+   <ellipse cx="120.5" cy="39.96" fill="url(#svg_11)" fill-opacity="0.71" id="svg_5" opacity="0.35" rx="118.5" ry="37.5" stroke="url(#svg_4)" stroke-dasharray="2" stroke-linecap="null" stroke-linejoin="round" stroke-width="3"/>
+   <text class="anmiateGsap-2 Rrrrr" fill="#ffff00" font-family="Cursive" font-size="4" id="svg_3" opacity="0.95" stroke="url(#svg_6)" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="round" stroke-width="0" transform="matrix(1, 0, 0, 1, 0, 0)" x="100" y="47.73">GSAP</text>
+   <text class="anmiateGsap-2 heavy" id="svg_2" transform="matrix(1.05317, 0, 0, 1.16667, -3.34979, -7.66667)" x="55.4" y="61.57">library</text>
+   <text class="anmiateGsap-2  small" id="svg_1" transform="matrix(1, 0, 0, 1, 0, 0) matrix(1.05417, 0, 0, 1.1866, -2.60617, -0.465693)" x="40.46" y="20.9">Animate</text>
+  </g>
+ </svg>
 </div>
-
+<button class="p-3 bg-orange-300" id="btnGsap-1">Gsap-1</button>
+<button class="p-3 bg-orange-300" id="btnGsap-2">Gsap-2</button>
+<div class=" flex items-center justify-between h-48 mt-5 p-5 bg-zinc-50/15 overflow-hidden">
+  <div class="block box-left w-32 h-32 rounded-lg bg-orange-400"></div>
+  <div class="block box-right w-32 h-32 rounded-lg bg-green-400"></div>
+  </div>
 <div class=" flex items-center justify-end h-44 mt-5 bg-zinc-50/15 overflow-hidden">
 <div class="block test w-32 h-32 rounded-full bg-orange-400"></div>
+<div class="block box-left w-32 h-32 rounded-lg bg-green-400"></div>
 </div>
 
 <div class="flex items-center justify-around h-44 mt-5  overflow-hidden">
