--- a/index.html
+++ b/index.html
@@ -1111,41 +1111,20 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
 </div>
 
 
-<!-- <svg class="w-2/6 mx-auto" viewBox="0 0 240 80" xmlns="http://www.w3.org/2000/svg">
-  <style>
-    .small {
-      font: italic 13px sans-serif;
-      fill: red;
-    }
-    .heavy {
-      font: bold italic 20px sans-serif;
-      fill: blueviolet;
-    }
+<div id="container-txt-gsap" class="w-full flex justify-center">
 
-    .Rrrrr {
-      font: italic bold 40px sans-serif;
-      fill: greenyellow;
-    }
-  </style>
-
-  <text x="5" y="20" class="self-center  small">Animate</text>
-  <text x="40" y="50" class="self-center heavy">library</text>
-  <text x="65" y="35" class="self-center Rrrrr">GSAP</text>
-</svg> -->
-<div class="flex justify-center">
-
-<svg viewBox="0 0 240 80" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" class="w-2/6 mx-auto anmiateGsap-1">
+<svg  class="w-full   anmiateGsap-1" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
   <style>.small {
-       font: italic 13px sans-serif;
+       font: italic 23px sans-serif;
        fill: red;
      }
      .heavy {
-       font: bold italic 20px sans-serif;
+       font: bold italic 30px sans-serif;
        fill: blueviolet;
      }
  
      .Rrrrr {
-       font: italic bold 40px sans-serif;
+       font: italic bold 50px sans-serif;
        fill: greenyellow;
      }</style>
   <defs>
@@ -1164,10 +1143,10 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
   </defs>
   <g class="layer">
    <title>Layer 1</title>
-   <ellipse cx="120.5" cy="39.96" fill="url(#svg_11)" fill-opacity="0.71" id="svg_5" opacity="0.35" rx="118.5" ry="37.5" stroke="url(#svg_4)" stroke-dasharray="2" stroke-linecap="null" stroke-linejoin="round" stroke-width="3"/>
-   <text class="anmiateGsap-2 Rrrrr" fill="#ffff00" font-family="Cursive" font-size="4" id="svg_3" opacity="0.95" stroke="url(#svg_6)" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="round" stroke-width="0" transform="matrix(1, 0, 0, 1, 0, 0)" x="100" y="47.73">GSAP</text>
-   <text class="anmiateGsap-2 heavy" id="svg_2" transform="matrix(1.05317, 0, 0, 1.16667, -3.34979, -7.66667)" x="55.4" y="61.57">library</text>
-   <text class="anmiateGsap-2  small" id="svg_1" transform="matrix(1, 0, 0, 1, 0, 0) matrix(1.05417, 0, 0, 1.1866, -2.60617, -0.465693)" x="40.46" y="20.9">Animate</text>
+   <ellipse class="" cx="920.5" cy="79.96" fill="url(#svg_11)" fill-opacity="0.71" id="svg_5" opacity="0.35" rx="218.5" ry="67.5" stroke="url(#svg_4)" stroke-dasharray="2" stroke-linecap="null" stroke-linejoin="round" stroke-width="3"/>
+   <text id="text-gsap" class=" Rrrrr" fill="#ffff00" font-family="Cursive" font-size="4" id="svg_3" opacity="0.95" stroke="url(#svg_6)" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="round" stroke-width="0" transform="matrix(1, 0, 0, 1, 0, 0)" x="1594.9" y="84.73">GSAP</text>
+   <text class="anmiateGsap-2 heavy" id="svg_2" transform="matrix(1.05317, 0, 0, 1.16667, -3.34979, -7.66667)" x="780.4" y="110.57">library</text>
+   <text class="anmiateGsap-2  small" id="svg_1" transform="matrix(1, 0, 0, 1, 0, 0) matrix(1.05417, 0, 0, 1.1866, -2.60617, -0.465693)" x="730.46" y="50.9">Animate</text>
   </g>
  </svg>
 </div>
@@ -1199,6 +1178,9 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
   </div>
   
 
+  <div id="container_miniBus" class=" flex justify-end items-center  h-44 mt-5 bg-zinc-50/15 overflow-hidden">
+
+    </div>
  <!-- <div class="bg-slate-400 h-28"> </div>
  <div id="mojs-div" class="bg-slate-600/20 h-44">5</div>
  <div class="bg-slate-600/20 h-44">6</div>
