create  gsap gallery 3rd

--- a/index.html
+++ b/index.html
@@ -2608,6 +2608,40 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
     </div>
   </div>
     </div>
+<div class="w-screen h-screen bg-cyan-950">
+<div class="container-gsapAll w-full h-full  flex  flex-col">
+<div class="titleGsap-Animate bg-black mx-auto w-4/5 h-1/4 "></div>
+
+
+<div class="stage">
+<div class="container-gsap absolute">
+  <div class="ring absolute">
+    <div class="img  absolute "></div>
+    <div class="img  absolute "></div>
+    <div class="img  absolute "></div>
+    <div class="img  absolute "></div>
+    <div class="img  absolute "></div>
+    <div class="img  absolute "></div>
+    <div class="img  absolute "></div>
+    <div class="img  absolute "></div>
+    <div class="img  absolute "></div>
+    <div class="img  absolute "></div>
+  </div>
+</div>
+
+</div>
+<!-- <div class="container-gsap-gallery w-full h-3/4 select-none transform-gpu overflow-hidden">
+  
+  <div class="   select-none transform-gpu flex slider-gsap  h-3/4 ">
+    <div class="Gallery-animate  bg-blue-300 w-screen "></div>
+    <div class="Gallery-animate  bg-red-900 w-full h-3/4 select-none transform-gpu overflow-hidden"></div>
+    <div class="Gallery-animate  bg-yellow-600w-full h-3/4 select-none transform-gpu overflow-hidden"></div>
+    <div class="Gallery-animate  bg-purple-600 w-full h-3/4 select-none transform-gpu overflow-hidden"></div>
+  </div>
+  
+</div> -->
+</div>
+</div>
 <div id="js-logo" class="logo"></div>
   <script src="./src/prismMini.js"> </script>
 <!--TODO ------------ library_MoJS ---------------- -->
@@ -2620,6 +2654,7 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/Draggable.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/MotionPathPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
 <script src="./app.js"></script>
 
 
