create  gsap gallery 3rd

--- a/index.html
+++ b/index.html
@@ -2616,7 +2616,7 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
 <div class="stage">
 <div class="container-gsap absolute">
   <div class="ring absolute">
-    <div class="img  absolute "></div>
+    <div class="img w-72 absolute "></div>
     <div class="img  absolute "></div>
     <div class="img  absolute "></div>
     <div class="img  absolute "></div>
