--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,9 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
 <div class="stage">
 <div class="container-gsap absolute">
   <div class="ring absolute">
+    
     <div class="img  absolute flex items-center">
+     
       <div class=" flex items-center justify-between w-full h-48 mt-5 p-5 bg-zinc-50/15 overflow-hidden">
         <div class="block box-left w-32 h-32 ">
           <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
@@ -1267,7 +1269,9 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
         </div>
         </div>
     </div>
-    <div class="img  absolute "></div>
+    <div  class="img  absolute ">
+      <button id="show" class="p-3 bg-red-400">show</button>
+    </div>
     <div class="img  absolute "></div>
     <div class="img  absolute "></div>
     <div class="img  absolute "></div>
