--- a/index.html
+++ b/index.html
@@ -1269,17 +1269,15 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
         </div>
         </div>
     </div>
-    <div  class="img  absolute ">
-      <button id="show" class="p-3 bg-red-400">show</button>
-    </div>
-    <div class="img  absolute "></div>
-    <div class="img  absolute "></div>
-    <div class="img  absolute "></div>
-    <div class="img  absolute "></div>
-    <div class="img  absolute "></div>
-    <div class="img  absolute "></div>
-    <div class="img  absolute "></div>
-    <div class="img  absolute "></div>
+    <div class="img  absolute p-5"></div>
+    <div class="img  absolute p-5"></div>
+    <div class="img  absolute p-5"></div>
+    <div class="img  absolute p-5"></div>
+    <div class="img  absolute p-5"></div>
+    <div class="img  absolute p-5"></div>
+    <div class="img  absolute p-5"></div>
+    <div class="img  absolute p-5"></div>
+    <div class="img  absolute p-5"></div>
   </div>
 </div>
 
