update gallery 3d add bg color and svg

--- a/index.html
+++ b/index.html
@@ -2797,7 +2797,7 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
     <!-- </div>
       </div>
    -->
-</div>
+<!-- </div> -->
 <div id="js-logo" class="logo"></div>
   <script src="./src/prismMini.js"> </script>
 <!--TODO ------------ library_MoJS ---------------- -->
