update change vite module moJs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
+   <!-- <link rel="stylesheet" href="style.css"> -->
+   	<link rel="stylesheet" href="./src/style.css">
    <link href='//fonts.googleapis.com/css?family=Asap:400,700' rel='stylesheet' type='text/css'>
    <!--TODO ------------------------- TailwindCss ------------------------- -->
    <link rel="stylesheet" href="./dist/output.css">
@@ -15,7 +16,7 @@
     <!-- <link rel="stylesheet" href="./src/prism.css"> -->
     <link rel="stylesheet" href="prismMini.css">
 	<!-- <link rel="stylesheet" href="prism-live.css">  -->
-	<link rel="stylesheet" href="./style.css">
+
 
     <title>Document</title>
   </head>
@@ -23,6 +24,7 @@
     <div id="app">
       <div id="ContainerAnimateCss"></div>
        <div id="ContainerAnimateJS"></div>
+       <div id="ContainerMoJs"></div>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
