--- a/index4.html
+++ b/index4.html
@@ -1098,6 +1098,9 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
 });
 </code></pre>
 </div>
+       <!--? ----------------------------------------------------------------------- -->
+       <!--* ---------------------------- Install GSAP ----------------------------- -->
+       <!--?----------------------------------------------------------------------- --> 
 <div class="flex justify-center ">
    <div class="w-3/4 m-2 p-3 border border-dashed bg-white bg-opacity-10">
 
