--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
       <div id="ContainerAnimateCss"></div>
        <div id="ContainerAnimateJS"></div>
        <div  id="ContainerMoJs"></div>
+        <div id="ContainerGsap"></div>
     </div>
     <!--TODO ------------ library_MoJS ---------------- -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/@mojs/core"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
